last fix for product card alignment mobile price

--- a/client/src/Styles/Product.css
+++ b/client/src/Styles/Product.css
@@ -51,10 +51,10 @@
 }
 @media only screen and (max-width: 600px) {
     .badge {
-        margin-left: 45%;
+        left: 65%;
     }
     .val-badge {
-        margin-left: 0;
+        margin-left: -15%;
     }
 }
 
